@startuml

    'https://plantuml.com/class-diagram

    class Favorable{
        + sorprender(Vehiculo) : void
        + accionar(Vehiculo) : void
    }

    class Desfavorable{
        + sorprender(Vehiculo) : void
        + accionar(Vehiculo) : void
    }

    class CambioVehiculo{
        + sorprender(Vehiculo) : void
        + accionar(Vehiculo) : void
    }

    interface Accionable{
        + accionar(Vehiculo) : void
    }

    interface Sorpresa{
        + sorprender(Vehiculo vehiculo) : void
    }

    Favorable ..|> Sorpresa
    Desfavorable ...|> Sorpresa
    CambioVehiculo ...|> Sorpresa

    Favorable ...|> Accionable
    Desfavorable ..|> Accionable
    CambioVehiculo .|> Accionable

@enduml